Fix code quality issues